# UE4-Protobuf

./: .gitignore  CMakeLists.txt  README.md  build-Android.bat  build-Ios.command  build-Linux.sh  build-Mac.command  build-Window.bat
Inc/google/protobuf/: generated_message_table_driven.h  map_entry_lite.h  message_lite.h
Inc/google/protobuf/stubs/: port.h  type_traits.h
